--- a/Django_React_Blog/frontend/package.json
+++ b/Django_React_Blog/frontend/package.json
@@ -10,17 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+    "@ckeditor/ckeditor5-react": "^10.0.0",
+    "@paypal/react-paypal-js": "^8.8.3",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
-    "dompurify": "^3.2.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-photo-album": "^3.1.0",
     "react-router-dom": "^7.6.3",
-    "recharts": "^3.0.2",
+    "sweetalert2": "^11.22.2",
+    "yet-another-react-lightbox": "^3.24.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
