--- a/Django_React_Blog/frontend/package.json
+++ b/Django_React_Blog/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^44.3.0",
